split output into 3 containers

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>DECO3000 AI Prototype</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <style>
         :root {
             --background: rgb(253, 253, 249);
@@ -10,9 +13,49 @@
             --purple: rgb(218, 186, 255);
             --darkPurple: rgb(106, 71, 130);
             --blue: rgb(186, 225, 255);
+            --outputBlue: rgb(135, 174, 227);
+            --darkBlue: rgb(75, 125, 193);
             --green: rgb(199, 255, 186);
             --yellow: rgb(255, 252, 186);
         }
+
+        .sarabun-regular, body, p, form, input {
+        font-family: "Sarabun", serif;
+        font-weight: 400;
+        font-style: normal;
+        }
+
+        .sarabun-semibold {
+        font-family: "Sarabun", serif;
+        font-weight: 600;
+        font-style: normal;
+        }
+
+        .sarabun-bold, h1, h2, h3, #outputLabel {
+        font-family: "Sarabun", serif;
+        font-weight: 700;
+        font-style: normal;
+        }
+
+        .sarabun-regular-italic {
+        font-family: "Sarabun", serif;
+        font-weight: 400;
+        font-style: italic;
+        }
+
+        .sarabun-semibold-italic {
+        font-family: "Sarabun", serif;
+        font-weight: 600;
+        font-style: italic;
+        }
+
+        .sarabun-bold-italic {
+        font-family: "Sarabun", serif;
+        font-weight: 700;
+        font-style: italic;
+        }
+
+
         body {
             background-color: var(--background);
             font-size: larger;
@@ -40,32 +83,41 @@
             flex-wrap: wrap;
         }
         
-        .outputSection div {
+        #outputLabel, #stickyNotesContainer {
             /* border: rgb(77, 77, 77) solid 2px; */
             border-radius: 3px;
             background-color: var(--blue);
             filter: drop-shadow(0px 2px 4px #a8a8a8);
+            margin: 8px 15px;
+        }
+        #stickyNotesContainer div {
+            background-color: var(--outputBlue);
+            border-radius: 5px;
             margin: 15px;
+            padding: 15px;
+            filter: drop-shadow(0px 2px 4px #a8a8a8);
         }
 
         #outputLabel {
             padding: 5px 10px;
             width: 25%;
-            background-color: rgb(151, 198, 234);
-            border:rgb(130, 175, 210) solid 2px;
+            background-color: var(--darkBlue);
+            /* border:rgb(130, 175, 210) solid 2px; */
+            color: white;
             border-radius: 5px;
             text-align: center;
         }
         
+        /* stickyNotesContainer is the container for the final Wordware output */
         #stickyNotesContainer {
             overflow-y: scroll;
             height: 90%;
         }
-        #stickyNotesContainer>p {
+        #stickyNotesContainer p {
             margin: 15px;
         }
-        #stickNotesContainer>h2 {
-            color: red;
+        #stickyNotesContainer h1, #stickyNotesContainer h2, #stickyNotesContainer h3 {
+            color: var(--darkBlue);
         }
 
         #stickyNoteDisplay {
@@ -82,11 +134,14 @@
             border-radius: 5px;
             padding: 15px;
             margin: 5px;
-            background-color: #a8a8a8;
+            /* background-color: #a8a8a8; */
             filter: drop-shadow(3px 3px 3px #717171);
         }
         .activeSticky {
             background-color: var(--purple);
+        }
+        .oldSticky {
+            background-color: #c9c9c9;
         }
 
         form {
@@ -110,19 +165,29 @@
             height: 50px;
             width: 100%;
             align-self: center;
+            text-align: center;
+        }
+
+        .subtitleLabel {
+            font-style: italic;
+            font-size: small;
+        }
+        .boldUnderlineLabel {
+            text-decoration: underline;
+            font-weight: 700;
         }
     </style>
 </head>
 <body>
     <main>
-        <h1>the emo-board: DECO3000 Mental Health Sticky Notes AI App</h1>
+        <h1>the emo-board <span class="subtitleLabel">DECO3000 Mental Health Sticky Notes AI App</span></h1>
         <!-- <p>Welcome to the sticky-note whiteboard!</p> -->
         <article>
             <section class="promptSection">
                 <!-- button opens the stickynote modal -->
                 <!-- <button id="createSticky">Create sticky note</button> -->
                 <form id="stickyNoteForm" onsubmit="submitForm(event)" method="POST">
-                    <label for="stickyNoteInput">Type out your thoughts or experiences today, like how you are feeling and what has happened in your day. When you are done, click the submit button <strong>once</strong> to get guidance on your emotions and how to communicate them.</label>
+                    <label for="stickyNoteInput">Type out your thoughts or experiences today, like how you are feeling and what has happened in your day. When you are done, click the submit button <span class="boldUnderlineLabel">once</span> to get guidance on your emotions and how to communicate them.</label>
                     <input required type="text" id="stickyNoteInput" name="stickyNoteInput" placeholder="Type up your feelings here...." value="">
                     <input type="submit" value="Submit" id="formSubmitBtn" onclick="onButtonClick()">
                 </form>
@@ -144,7 +209,7 @@
             </section>
             <section class="outputSection">
                 <!-- stickyNotesContainer is used for the output -->
-                <div id="outputLabel">Generated response</div>
+                <div id="outputLabel">Generated guidance</div>
                 <div id="stickyNotesContainer"><p><em>Type something and add a sticky note to generate an output</em></p></div>
             </section>
         </article>
@@ -164,14 +229,14 @@
                     let item = document.createElement('div');
                     let currentDate = new Date().toDateString();
                     item.setAttribute('data-id', stickyNote.id);
-                    console.log('sticknote date', stickyNote.date);
-                    consolelog('todays date', currentDate);
+                    // console.log('sticknote date', stickyNote.date);
+                    // console.log('todays date', currentDate);
 
                     // if stickynote was made on the same day, make it purple, otherwise old sticky notes are grey
                     if (stickyNote.date === currentDate) {
                         item.className = "activeSticky";
                     } else {
-                        item.className = "";
+                        item.className = "oldSticky";
                     }
 
                     let information = document.createElement('p');
@@ -205,6 +270,8 @@
                 }
             }
             localStorage.setItem('stickies', JSON.stringify(localSticky));
+            // reset display
+            stickyNoteDisplay.innerHTML = "";
             displayStickyNotes();
         }
 
@@ -251,6 +318,37 @@
             // let sections = input.split(/<h2> /).filter(Boolean);
 
             return input;
+        }
+        function splitParagraphs(htmlInput) {
+            console.log(htmlInput);
+
+            // temporary div container holding all of the html
+            let tempDiv = document.createElement('div');
+            tempDiv.innerHTML = htmlInput;
+
+            // get all the <h2> heading elements to split by with array to hold them
+            let headings = tempDiv.querySelectorAll('h2');
+            let contentSections = [];
+
+            // loop each heading and get the content
+            headings.forEach((heading, index) => {
+                let nextElement = heading.nextElementSibling;
+                let content = heading.outerHTML;
+
+                while (nextElement && nextElement.tagName !== 'h2') {
+                    content += nextElement.outerHTML;
+                    nextElement = nextElement.nextElementSibling;
+                }
+
+                let sectionDiv = document.createElement('div');
+                sectionDiv.innerHTML = content;
+                contentSections.push(sectionDiv);
+            })
+
+            let targetContainer = document.getElementById("stickyNotesContainer");
+            contentSections.forEach(section => {
+                targetContainer.appendChild(section);
+            })
         }
 
         // How to manage the emotions you are feeling
@@ -346,13 +444,60 @@
                     console.log(cleanedOutput);
 
                     // newStickyNote.innerHTML = convertedText;
-                    newStickyNote.innerHTML = cleanedOutput;
+                    // newStickyNote.innerHTML = cleanedOutput;
+                    // finalOutput = splitParagraphs(cleanedOutput);
+                    let tempDiv = document.createElement('div');
+                    tempDiv.innerHTML = cleanedOutput;
 
+                    // get all the <h2> heading elements to split by with array to hold them
+                    var queryString = "h2";
+                    var queryStringTag = "H2";
+                    if (cleanedOutput.includes("h2")) {
+                        queryString = 'h2';
+                        queryStringTag = "H2";
+                    } else if (cleanedOutput.includes("h3")) {
+                        queryString = 'h3';
+                        queryStringTag = "H3";
+                    } 
+                    let headings = tempDiv.querySelectorAll(queryString);
+                    let contentSections = [];
+
+                    // loop each heading and get the content
+                    headings.forEach((heading) => {
+                        let content = heading.outerHTML;
+                        let nextElement = heading.nextElementSibling;
+
+                        while (nextElement && nextElement.tagName !== queryStringTag) {
+                            content += nextElement.outerHTML;
+                            nextElement = nextElement.nextElementSibling;
+                        }
+
+                        let sectionDiv = document.createElement('div');
+                        sectionDiv.innerHTML = content;
+                        contentSections.push(sectionDiv);
+                    })
+
+                    // let targetContainer = document.getElementById("stickyNotesContainer");
+                    let i = 1;
+                    let finalString = "";
+                    contentSections.forEach(section => {
+                        if (i <= 3) {
+                            // stickyNoteContainer.appendChild(section);
+                            console.log('split section', section.outerHTML);
+                            finalString = finalString + section.outerHTML;
+                            // stickyNotesContainer.innerHTML.appendChild(section.outerHTML);
+                            // stickyNotesContainer.innerHTML += `<div>${section.innerHTML}<div>`;
+                            
+                        }
+                        i++;
+                    })
+                    console.log('final html', finalString);
+                    stickyNotesContainer.innerHTML = finalString;
 
                     // Append the new sticky note to the container
                     // stickyNotesContainer.appendChild(newStickyNote);
                     // stickyNotesContainer.innerHTML = convertedText;
-                    stickyNotesContainer.innerHTML = cleanedOutput;
+                    // stickyNotesContainer.innerHTML = finalOutput;
                     addStickyNote(userText);
                     document.body.style.cursor = 'default';
                     // displayStickyNotes();
